RESOLVED FIXED293051
[Safe CPP] Address Warnings in RenderTableCol.cpp
https://bugs.webkit.org/show_bug.cgi?id=293051
Summary [Safe CPP] Address Warnings in RenderTableCol.cpp
Brandon
Reported 2025-05-15 09:37:02 PDT
Address safe cpp warnings in RenderTableCol.cpp
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-15 09:37:22 PDT
Brandon
Comment 2 2025-05-15 09:41:32 PDT
EWS
Comment 3 2025-05-27 10:15:12 PDT
Committed 295455@main (548dd5dbfa84): <https://commits.webkit.org/295455@main> Reviewed commits have been landed. Closing PR #45434 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.