[Safe CPP] Address Warnings in RenderTableCol.cpp https://bugs.webkit.org/show_bug.cgi?id=293051 rdar://problem/151391328

Reviewed by Ryosuke Niwa.

Address safe cpp warnings in RenderTableCol.cpp.

To address the warnings I was required to implement downcast support into
CheckedPtrs. The implementation is based off of RefPtr's downcast support with
minor changes to account for differences between classes and implement the static_pointer_cast
directly into the function.

 * Source/WTF/wtf/CheckedPtr.h:
 (WTF::uncheckedDowncast):
 (WTF::downcast):
 (WTF::dynamicDowncast):
 * Source/WebCore/SaferCPPExpectations/UncheckedCallArgsCheckerExpectations:
 * Source/WebCore/SaferCPPExpectations/UncheckedLocalVarsCheckerExpectations:
 * Source/WebCore/rendering/AutoTableLayout.cpp:
 (WebCore::AutoTableLayout::fullRecalc):
 * Source/WebCore/rendering/FixedTableLayout.cpp:
 (WebCore::FixedTableLayout::calcWidthArray):
 * Source/WebCore/rendering/RenderElement.h:
 (WebCore::RenderElement::protectedStyle const):
 * Source/WebCore/rendering/RenderTable.cpp:
 (WebCore::RenderTable::updateColumnCache const):
 (WebCore::RenderTable::effectiveIndexOfColumn const):
 (WebCore::RenderTable::offsetWidthForColumn const):
 * Source/WebCore/rendering/RenderTable.h:
 * Source/WebCore/rendering/RenderTableCell.cpp:
 (WebCore::RenderTableCell::logicalWidthFromColumns const):
 (WebCore::RenderTableCell::computeCollapsedStartBorder const):
 (WebCore::RenderTableCell::computeCollapsedEndBorder const):
(WebCore::RenderTableCell::computeCollapsedBeforeBorder const):
 (WebCore::RenderTableCell::computeCollapsedAfterBorder const):
 * Source/WebCore/rendering/RenderTableCol.cpp:
 (WebCore::RenderTableCol::styleDidChange):
 (WebCore::RenderTableCol::updateFromElement):
 (WebCore::RenderTableCol::willBeRemovedFromTree):
(WebCore::RenderTableCol::clippedOverflowRect const):
 (WebCore::RenderTableCol::clearPreferredLogicalWidthsDirtyBits):
 (WebCore::RenderTableCol::table const):
 (WebCore::RenderTableCol::enclosingColumnGroup const):
 (WebCore::RenderTableCol::nextColumn const):
 (WebCore::RenderTableCol::borderAdjoiningCellStartBorder const):
 (WebCore::RenderTableCol::borderAdjoiningCellEndBorder const):
 (WebCore::RenderTableCol::borderAdjoiningCellBefore const):
 (WebCore::RenderTableCol::borderAdjoiningCellAfter const):
 * Source/WebCore/rendering/RenderTableCol.h:
 (WebCore::RenderTableCol::enclosingColumnGroupIfAdjacentBefore const):
 (WebCore::RenderTableCol::enclosingColumnGroupIfAdjacentAfter const):
 * Source/WebCore/rendering/RenderTableSection.cpp:
 (WebCore::RenderTableSection::paintCell):

Canonical link: https://commits.webkit.org/295455@main